# Auto_job

./: .gitignore  README.md  application_log.json  auto_apply.py  jobs.json  parse_jobs.py  pyproject.toml
2026-AI-College-Jobs/: INTERN_INTL.md
ApplyPilot_isolated_test/: .env.example  README.md  profile.example.json  pyproject.toml
ApplyPilot_isolated_test/src/applypilot/: config.py  database.py  import_jobs.py
ApplyPilot_isolated_test/src/applypilot/apply/: chrome.py  launcher.py  prompt.py
ApplyPilot_isolated_test/src/applypilot/config/: employers.yaml  sites.yaml
ApplyPilot_isolated_test/src/applypilot/wizard/: init.py
ApplyPilot_isolated_test/tests/: test_confirmation_email.py
dashboard/: app.js  application_log.json  index.html  server.py  styles.css
job_automation_rc/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
job_automation_rc/src/applypilot/: cli.py  email.py  llm.py  view.py
job_automation_rc/src/applypilot/apply/: prompt.py
job_automation_rc/src/applypilot/config/: searches.example.yaml
job_automation_rc/src/autojob/: __init__.py  __main__.py  cli.py  config.py  database.py  email.py  import_jobs.py  llm.py  pipeline.py  view.py
job_automation_rc/src/autojob/apply/: chrome.py  dashboard.py  launcher.py  prompt.py  verification.py
job_automation_rc/src/autojob/config/: searches.example.yaml
job_automation_rc/src/autojob/discovery/: jobspy.py  smartextract.py  workday.py
job_automation_rc/src/autojob/enrichment/: detail.py
job_automation_rc/src/autojob/scoring/: cover_letter.py  pdf.py  scorer.py  tailor.py  validator.py
job_automation_rc/src/autojob/wizard/: init.py
job_automation_rc/tests/: test_confirmation_email.py  test_email.py  test_import_jobs.py  test_verification.py
