[project]
name = "auto-apply-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramnarayan Choudhary",email = "choudharyramnarayan123@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-openai (>=0.2.0)",
    "browser-use (>=0.12.1,<0.13.0)",
    "python-dotenv (>=1.2.1,<1.3.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
